--- a/Coder-Swag/Base.lproj/Main.storyboard
+++ b/Coder-Swag/Base.lproj/Main.storyboard
@@ -89,11 +89,113 @@
                     <navigationItem key="navigationItem" title="CODERSWAG" id="F5E-Pf-SaA"/>
                     <connections>
                         <outlet property="categoryTable" destination="cpA-JV-YVD" id="FAC-ha-mDj"/>
+                        <segue destination="E0I-v0-s41" kind="show" identifier="ProductsVC" id="Dct-nV-bih"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="621.60000000000002" y="105.69715142428787"/>
+        </scene>
+        <!--ProductsVC-->
+        <scene sceneID="d4o-Gs-Adu">
+            <objects>
+                <viewController id="E0I-v0-s41" customClass="ProductsVC" customModule="Coder_Swag" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8QF-QW-Fw3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PRODUCTS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M0m-rc-VMe">
+                                <rect key="frame" x="15" y="30" width="166" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="23.5" id="06u-m6-iI0"/>
+                                    <constraint firstAttribute="width" constant="166" id="Vaa-DW-bwh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7qv-qv-kmk">
+                                <rect key="frame" x="0.0" y="70" width="375" height="533"/>
+                                <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Sxe-IH-d0s">
+                                    <size key="itemSize" width="178" height="265"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductCell" id="69S-rD-h1d" customClass="ProductCell" customModule="Coder_Swag" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="178" height="265"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="178" height="265"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shirt01" translatesAutoresizingMaskIntoConstraints="NO" id="SkC-Y6-F3c">
+                                                    <rect key="frame" x="0.0" y="0.0" width="178" height="178"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="178" id="afd-u2-1CS"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Devslopes Logo Graphic T-Shirt" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dcV-WM-di4">
+                                                    <rect key="frame" x="4" y="188" width="170" height="41"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="170" id="0Ub-4r-4Cc"/>
+                                                        <constraint firstAttribute="height" constant="41" id="vgP-Qm-Zl9"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                                    <color key="textColor" red="0.31293117659500352" green="0.31602950507614214" blue="0.31602950507614214" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$25" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z2C-Vf-yos">
+                                                    <rect key="frame" x="4" y="239" width="170" height="20.5"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                                    <color key="textColor" red="0.31293117660000003" green="0.3160295051" blue="0.3160295051" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="tintColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="SkC-Y6-F3c" firstAttribute="leading" secondItem="69S-rD-h1d" secondAttribute="leading" id="5bP-ez-V1t"/>
+                                            <constraint firstItem="dcV-WM-di4" firstAttribute="top" secondItem="SkC-Y6-F3c" secondAttribute="bottom" constant="10" id="62h-41-WKL"/>
+                                            <constraint firstAttribute="trailing" secondItem="dcV-WM-di4" secondAttribute="trailing" constant="4" id="F7H-Yz-i2s"/>
+                                            <constraint firstAttribute="trailing" secondItem="SkC-Y6-F3c" secondAttribute="trailing" id="IVy-MZ-2x8"/>
+                                            <constraint firstItem="SkC-Y6-F3c" firstAttribute="top" secondItem="69S-rD-h1d" secondAttribute="top" id="LO2-uy-H97"/>
+                                            <constraint firstItem="Z2C-Vf-yos" firstAttribute="leading" secondItem="69S-rD-h1d" secondAttribute="leading" constant="4" id="Ppy-UQ-7qc"/>
+                                            <constraint firstItem="dcV-WM-di4" firstAttribute="leading" secondItem="69S-rD-h1d" secondAttribute="leading" constant="4" id="R1R-ja-c0M"/>
+                                            <constraint firstAttribute="bottom" secondItem="Z2C-Vf-yos" secondAttribute="bottom" constant="5.5" id="oCg-1l-2RE"/>
+                                            <constraint firstItem="Z2C-Vf-yos" firstAttribute="top" secondItem="dcV-WM-di4" secondAttribute="bottom" constant="10" id="rsO-5s-KWg"/>
+                                            <constraint firstAttribute="trailing" secondItem="Z2C-Vf-yos" secondAttribute="trailing" constant="4" id="uNL-gl-dMq"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="productImage" destination="SkC-Y6-F3c" id="fC3-04-XFW"/>
+                                            <outlet property="productPrice" destination="Z2C-Vf-yos" id="cyN-AO-kn8"/>
+                                            <outlet property="productTitle" destination="dcV-WM-di4" id="Jmh-WC-fXq"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="7qv-qv-kmk" firstAttribute="leading" secondItem="bvi-iW-LLx" secondAttribute="leading" id="2js-fd-fyP"/>
+                            <constraint firstItem="7qv-qv-kmk" firstAttribute="trailing" secondItem="bvi-iW-LLx" secondAttribute="trailing" id="3hc-qw-rjC"/>
+                            <constraint firstItem="M0m-rc-VMe" firstAttribute="top" secondItem="bvi-iW-LLx" secondAttribute="top" constant="30" id="JOP-el-YkV"/>
+                            <constraint firstItem="7qv-qv-kmk" firstAttribute="top" secondItem="M0m-rc-VMe" secondAttribute="bottom" constant="16" id="Prv-hf-x19"/>
+                            <constraint firstItem="7qv-qv-kmk" firstAttribute="bottom" secondItem="bvi-iW-LLx" secondAttribute="bottom" id="T5P-Ou-Khu"/>
+                            <constraint firstItem="M0m-rc-VMe" firstAttribute="leading" secondItem="bvi-iW-LLx" secondAttribute="leading" constant="15" id="eV4-Kb-epg"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="bvi-iW-LLx"/>
+                    </view>
+                    <connections>
+                        <outlet property="productsCollection" destination="7qv-qv-kmk" id="R2r-CS-RpK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="faB-cv-s8m" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1357.5999999999999" y="105.69715142428787"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pQk-pH-JK5">
@@ -103,6 +205,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="f0w-BP-vyG">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="barTintColor" red="0.52941176470588236" green="0.22352941176470587" blue="0.25098039215686274" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -120,5 +223,6 @@
     </scenes>
     <resources>
         <image name="digital" width="1024" height="703"/>
+        <image name="shirt01" width="500" height="500"/>
     </resources>
 </document>
